--- a/app/src/main/res/layout/item_link.xml
+++ b/app/src/main/res/layout/item_link.xml
@@ -8,7 +8,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Youtube"
+        tools:text="NAME"
         android:layout_margin="16dp"
         android:textSize="20sp"
         android:layout_toStartOf="@id/url"
@@ -19,7 +19,7 @@
         android:id="@+id/url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="www.youtube.com"
+        tools:text="URL"
         android:layout_margin="16dp"
         android:textSize="20sp"
         android:textColor="@color/black"
