--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:autoSizeMaxTextSize="20dp"
         android:text="About Me"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toTopOf="@id/prime"
         app:layout_constraintEnd_toStartOf="@+id/clicky"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,6 @@
         android:layout_height="wrap_content"
         android:autoSizeTextType="none"
         android:text="Clicky Clicky"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toTopOf="@id/links"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_send"
@@ -47,12 +45,10 @@
         android:layout_height="wrap_content"
         android:autoSizeMaxTextSize="20dp"
         android:text="Link Collector"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/prime"
-        app:layout_constraintTop_toBottomOf="@id/clicky"
-         />
+        app:layout_constraintTop_toBottomOf="@id/clicky" />
 
     <Button
         android:id="@+id/prime"
@@ -60,11 +56,22 @@
         android:layout_height="wrap_content"
         android:autoSizeMaxTextSize="20dp"
         android:text="Prime Directive"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/location"
         app:layout_constraintEnd_toStartOf="@+id/links"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_send" />
+
+    <Button
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoSizeMaxTextSize="20dp"
+        android:text="Location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/prime"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
