--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -34,24 +34,15 @@
         app:layout_constraintTop_toBottomOf="@id/longitude"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/getLocation"/>
+        app:layout_constraintBottom_toTopOf="@id/reset"/>
 
-    <Button
-        android:id="@+id/getLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GET LOCATION"
-        app:layout_constraintTop_toBottomOf="@id/distance"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/reset"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RESET"
-        app:layout_constraintStart_toEndOf="@id/getLocation"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/distance"
         app:layout_constraintBottom_toBottomOf="parent"/>
